[GStreamer] Builds fails with ENABLE_VIDEO=OFF due to GStreamer usage https://bugs.webkit.org/show_bug.cgi?id=179373

Reviewed by Xabier Rodriguez-Calvar.

This allows to build with WebAudio enabled even if video support is
disabled by guarding usage of HTMLMediaElement with ENABLE(VIDEO).

No new tests needed.

* page/DeprecatedGlobalSettings.cpp:
(WebCore::DeprecatedGlobalSettings::setGStreamerEnabled): Guard usage of HTMLMediaElement.


Canonical link: https://commits.webkit.org/196180@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225323 268f45cc-cd09-0410-ab3c-d52691b4dbfc